# basic-crud-python-platzi

./: pyproject.toml
.github/workflows/: codeql-analysis.yml
basic_crud/: __ini__.py
